--- a/src/components/ColunaLateral.css
+++ b/src/components/ColunaLateral.css
@@ -54,8 +54,7 @@
 /* Estilo para o item ativo (quando a rota corresponde) */
 .active-lista-item {
   background-color: #e9f7f1; /* Mesma cor de fundo do hover para consistência */
-  color: #000000;
-  font-weight: bold; /* Deixa o texto em negrito quando ativo */
+  color: #132A13;
 }
 
 /* Underline de transição no hover */
@@ -135,6 +134,6 @@
 
 .depoimento-card span {
   font-weight: bold;
-  color: #328f62; /* Cor do nome do depoente */
+  color: #132A13; /* Cor do nome do depoente */
   font-size: 0.95rem;
 }
