--- a/src/pages/Carrinho.css
+++ b/src/pages/Carrinho.css
@@ -30,7 +30,7 @@
   padding: 10px 0;
   font-weight: 600;
   font-size: 1.7rem;
-  border-bottom: 2px solid #328f62;
+  border-bottom: 2px solid #004d25;
 }
 
 /* Novo layout de carrinho */
@@ -159,7 +159,7 @@
   width: 100%;
   background: none;
   border: none;
-  color: #2e7d32;
+  color: #27ae60;
   font-size: 14px;
   cursor: pointer;
   text-align: center;
@@ -167,7 +167,7 @@
 }
 
 .btn-continuar:hover {
-  color: #1b5e20;
+  color: #229954;
 }
 
 .btn-remover {
@@ -209,7 +209,7 @@
 
 .btn-pagar {
   width: 100%;
-  background-color: #2e7d32;
+  background-color: #27ae60;
   color: white;
   border: none;
   padding: 12px;
@@ -221,7 +221,7 @@
 }
 
 .btn-pagar:hover:enabled {
-  background-color: #1b5e20;
+  background-color: #004d25;
 }
 
 .btn-pagar:disabled {
