--- a/src/pages/Entrar.css
+++ b/src/pages/Entrar.css
@@ -25,13 +25,13 @@
   padding: 10px 0;
   font-weight: 600;
   font-size: 1.7rem;
-  border-bottom: 2px solid #328f62;
+  border-bottom: 2px solid #004d25;
 }
 
 .descricao-entrar {
   margin-bottom: 20px;
   font-size: 14px;
-  color: #555;
+  color: #333;
 }
 
 /* Conteúdo lado a lado */
@@ -81,7 +81,7 @@
 }
 
 .form-box input::placeholder {
-  color: #999;
+  color: #333;
 }
 
 /* Lembrar-me e termos */
@@ -113,7 +113,7 @@
   display: block;
   margin: 20px auto 0 auto;
   padding: 12px 24px;
-  background-color: #1c8c5e;
+  background-color: #229954;
   color: white;
   border: none;
   border-radius: 4px;
@@ -123,7 +123,7 @@
 }
 
 .btn-principal:hover {
-  background-color: #176f4c;
+  background-color: #27ae60;
 }
 
 /* Linha separadora */
@@ -131,7 +131,7 @@
   text-align: center;
   margin: 20px 0;
   font-size: 14px;
-  color: #777;
+  color: #333;
   position: relative;
   display: flex;
   align-items: center;
