--- a/src/pages/DetalheProduto.css
+++ b/src/pages/DetalheProduto.css
@@ -70,6 +70,27 @@
   object-fit: cover;
 }
 
+.btn-favorito {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent; 
+  color: #4caf50;         
+  border: none;
+  border-radius: 50%;
+  padding: 4px;         
+  cursor: pointer;
+  font-size: 1.3rem;
+  box-shadow: none; 
+  transition: transform 0.2s ease;
+}
+
+.btn-favorito:hover {
+  transform: scale(1.2); 
+}
+
+
+
 .selo-promocao {
   position: absolute;
   top: 10px;
